--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>noter</title>
-    <meta name="description" content="noter app">
+    <title>hejnote.</title>
+    <meta name="description" content="hejnote. app">
 
     <!-- Favicons & Theme -->
     <meta name="theme-color" content="#111827">
