--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+    <link rel="apple-touch-startup-image" href="/images/splash.png">
   </head>
   <body>
     <div id="app"></div>
