updated theme color in meta tag

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="hejnote. app">
 
     <!-- Favicons & Theme -->
-    <meta name="theme-color" content="#111827">
+    <meta name="theme-color" content="#0A0E1A">
     <link rel="alternate icon" href="/favicon.ico" type="image/png" sizes="16x16">
     <link rel="icon" href="/favicons/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
