--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <div id="appTeleportRoot"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
