--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
   <body>
     <div id="app"></div>
     <div id="appTeleportRoot"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
